Reduced the number of Integer, Long, Float, Char, Short, etc objects created, by using valueOf instead of new.
Replaced string concatenation in loops with StringBuilder.

Fixed some bugs reported by FindBugs.

git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/trunk@1302364 13f79535-47bb-0310-9956-ffa450edef68